2009-02-18  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 560671 – the client_message API doesn't work in DirectFB

	* gdk/directfb/gdkevents-directfb.c: applied a slightly cleaned up
	patch from Steve Lhomme that adds this functionality using
	DirectFB's DFBUserEvent.

2009-02-18  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 543710 – Dead keys do not work anymore with DirectFB

	* gdk/directfb/gdkkeys-directfb.c (gdk_directfb_translate_key):
	applied patch from Josselin Mouette that removes special handling
	of dead keys as that is done by DirectFB for a long time already.

2009-02-18  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* configure.in: depend on DirectFB >= 1.0.0. There's no point in
	using an earlier development version.

2009-02-18  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	Bug 554407 – directfb backend does not implement GdkWindowImpl

	* gdk/directfb/gdkgeometry-directfb.c
	* gdk/directfb/gdkprivate-directfb.h
	* gdk/directfb/gdkwindow-directfb.c: fix the build of the DirectFB
	backend and resurrect basic functionality. Based on a patch from
	the Ubuntu bug-tracker and work by Masse Nicolas.

2009-02-16  Tor Lillqvist  <tml@novell.com>

	Bug 571873 - Compile error with gdk/win32/gdkselection-win32.c

	* gdk/win32/gdkselection-win32.c (gdk_selection_convert): Cast
	gpointer to char * before pointer arithmetic to avoid compilation
	error with MSVC.

	(_gdk_selection_property_delete): Remove unused variable.

2009-02-13  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk

        * gdk/x11/gdkdisplay-x11.c (gdk_display_open): Don't forget to
        register randr events. Found by Søren Sandmann

2009-02-12  Cody Russell  <bratsche@gnome.org>

        Bug 571576 – gdk_pixbuf_save_to_stream() broken

	* gdk-pixbuf/gdk-pixbuf-io.c: Fix gdk_pixbuf_save_to_stream() so that
	it does not always return FALSE (even when it succeeds), and also so
	that it does not set error to NULL when something goes wrong.
